chore: add 1_91 config

--- a/Boilerplates/TDisplay_AMOLED_1_91/platformio.ini
+++ b/Boilerplates/TDisplay_AMOLED_1_91/platformio.ini
@@ -9,9 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = T-Display-AMOLED
+;default_envs = T-Display-AMOLED
+default_envs = T-Display-AMOLED-191-ArduinoGFX
+
 ; src_dir = examples/lvgl/get_started
-src_dir = examples/CameraShield
+; src_dir = examples/CameraShield
+src_dir = examples/Arduino_GFX_PDQgraphicstest
 boards_dir = boards
 
 [env]
@@ -50,3 +53,11 @@ extends = env
 board = T-Display-AMOLED
 build_flags = 
 	${env.build_flags}
+
+[env:T-Display-AMOLED-191-ArduinoGFX]
+board = T-Display-AMOLED
+build_flags =
+    ${env.build_flags}
+lib_deps =   
+    moononournation/GFX Library for Arduino @ ^1.3.7
+    lewisxhe/SensorLib @ 0.2.0
